@@ -51,7 +51,7 @@ function smarty_function_config_load($params, &$smarty)
                 $_scope = 'local';
 			}
         }		
-			
+
         if(@is_dir($smarty->config_dir)) {
             $_config_dir = $smarty->config_dir;            
         } else {
@@ -59,50 +59,20 @@ function smarty_function_config_load($params, &$smarty)
 			$_params = array('file_path' => $smarty->config_dir);
             $smarty->_execute_core_function('get_include_path', $_params);
 			$_config_dir = $_params['new_file_path'];
-        }
-
-        $_file_path = str_replace('//', '/' ,$_config_dir . '/' . $_file);
-        
-        // get path to compiled object file
-        if(isset($_section)) {
-               $_compile_file = $smarty->_get_auto_filename($smarty->compile_dir, $_section . ' ' . $_file);
-        } else {
-               $_compile_file = $smarty->_get_auto_filename($smarty->compile_dir, $_file);
-        }
-
-        // need to compile config file?
-        if($smarty->force_compile || !file_exists($_compile_file) ||
-            ($smarty->compile_check &&
-                file_exists($_file_path) &&
-                ( filemtime($_compile_file) != filemtime($_file_path) ))) {
-            $_compile_config = true;
-        } else {
-            include($_compile_file);
-			$_compile_config = empty($_config_vars);
-        }
+        }		
 		
-        if($_compile_config) {
-            if(!is_object($smarty->_conf_obj)) {
-                require_once SMARTY_DIR . $smarty->config_class . '.class.php';
-                $smarty->_conf_obj = new $smarty->config_class($_config_dir);
-                $smarty->_conf_obj->overwrite = $smarty->config_overwrite;
-                $smarty->_conf_obj->booleanize = $smarty->config_booleanize;
-                $smarty->_conf_obj->read_hidden = $smarty->config_read_hidden;
-                $smarty->_conf_obj->fix_newlines = $smarty->config_fix_newlines;
-                $smarty->_conf_obj->set_path = $_config_dir;
-            }
-            if($_config_vars = array_merge($smarty->_conf_obj->get($_file),
-                    $smarty->_conf_obj->get($_file, $_section))) {
-                if(function_exists('var_export')) {
-                    $_compile_data = '<?php $_config_vars = ' . var_export($_config_vars, true) . '; return true; ?>';                    
-                } else {
-                    $_compile_data = '<?php $_config_vars = unserialize(\'' . str_replace('\'','\\\'', serialize($_config_vars)) . '\'); return true; ?>';
-                }
-				$_params = array('filename' => $_compile_file, 'contents' => $_compile_data, 'create_dirs' => true);
-				$smarty->_execute_core_function('write_file', $_params);
-                touch($_compile_file,filemtime($_file_path));
-            }
+        if(!is_object($smarty->_conf_obj)) {
+            require_once SMARTY_DIR . $smarty->config_class . '.class.php';
+            $smarty->_conf_obj = new $smarty->config_class($_config_dir);
+            $smarty->_conf_obj->overwrite = $smarty->config_overwrite;
+            $smarty->_conf_obj->booleanize = $smarty->config_booleanize;
+            $smarty->_conf_obj->read_hidden = $smarty->config_read_hidden;
+            $smarty->_conf_obj->fix_newlines = $smarty->config_fix_newlines;
+            $smarty->_conf_obj->set_path = $_config_dir;
         }
+
+        $_config_vars = array_merge($smarty->_conf_obj->get($_file),
+                $smarty->_conf_obj->get($_file, $_section));
 
         if ($smarty->caching) {
             $smarty->_cache_info['config'][$_file] = true;
@@ -127,8 +97,7 @@ function smarty_function_config_load($params, &$smarty)
                                                 'filename'  => $_file.' ['.$_section.'] '.$_scope,
                                                 'depth'     => $smarty->_inclusion_depth,
                                                 'exec_time' => $smarty->_execute_core_function('get_microtime', $_params) - $_debug_start_time);
-        }
-	
+        }	
 }
 
 /* vim: set expandtab: */
